tests/e2e/semantics/obj_implicit_bool_int_error.error
Error: syntax error in story at line 3, column 1

3|    map_bool = map_int
      ^^^^^^^^^^

E0100: Can't assign `Map[int,int]` to `Map[boolean,int]`
